--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,14 @@ before_install:
 script:
   - docker run tashigurung/docker-react npm run test -- --coverage
 
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  app: "docker-react"
+  env: "DockerReact-env"
+  bucket_name: "elasticbeanstalk-us-east-1-800014426955"
+  bucket_path: "docker-react"
+  on:
+    branch: master
+
 
